# LVOX

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Compressor.cpp  Compressor.h  DSPChain.cpp  DSPChain.h  DSPModule.h  DeEsser.cpp  DeEsser.h  Delay.cpp  Delay.h  HighPassFilter.cpp  HighPassFilter.h  LVOXReverb.cpp  LVOXReverb.h  Limiter.cpp  Limiter.h  MicCorrection.h  NoiseGate.cpp  NoiseGate.h  ParametricEQ.cpp  ParametricEQ.h  Saturation.cpp  Saturation.h
Source/Preset/: PresetManager.cpp  PresetManager.h
Source/UI/: AdvancedModePanel.cpp  AdvancedModePanel.h  FrutigerAeroLookAndFeel.cpp  FrutigerAeroLookAndFeel.h  ModulePanel.cpp  ModulePanel.h  SimpleModePanel.cpp  SimpleModePanel.h
Source/UI/Components/: EQCurveComponent.h  GlossyKnob.cpp  GlossyKnob.h  GlowButton.cpp  GlowButton.h  MacroKnob.cpp  MacroKnob.h  MeterComponent.cpp  MeterComponent.h  PresetSelector.cpp  PresetSelector.h
Source/UI/Helpers/: ColourPalette.h  GradientUtils.h
Source/UI/Panels/: CompressorPanel.cpp  CompressorPanel.h  DeEsserPanel.cpp  DeEsserPanel.h  DelayPanel.cpp  DelayPanel.h  EQPanel.cpp  EQPanel.h  HighPassPanel.cpp  HighPassPanel.h  LimiterPanel.cpp  LimiterPanel.h  NoiseGatePanel.cpp  NoiseGatePanel.h  ReverbPanel.cpp  ReverbPanel.h  SaturationPanel.cpp  SaturationPanel.h  SendBusPanel.cpp  SendBusPanel.h
scripts/: com.ludovicmarie.lvox.updater.plist  install-remote.sh  install.sh  lvox-update.sh  uninstall.sh
